@@ -1,19 +1,19 @@
 Package: jagsUI
-Version: 1.2
-Date: 2014-7-28
+Version: 1.3
+Date: 2014-12-1
 Title: Run JAGS (specifically, libjags) from R; an alternative user interface for rjags
 Author: Ken Kellner <ken@kenkellner.com>
 Maintainer: Ken Kellner <ken@kenkellner.com>
 Depends:
-    R (>= 2.14.0)    
+    R (>= 2.14.0),
+    lattice
 Imports:
     rjags (>= 3-3),
     coda (>= 0.13),
     parallel,
-    lattice,
     methods
 SystemRequirements: JAGS (http://mcmc-jags.sourceforge.net)
-Description: An alternative interface for running JAGS analyses in R via rjags/libjags. A complete analysis can be run with a single function call using syntax and input formats identical to those used by R2WinBUGS and R2OpenBUGS (as with the similar R2jags package). This allows easy switching between running MCMC in BUGS and JAGS.  Separate adaptive and "burn-in" MCMC phases can be specified and parallel processing of chains (on multi-core processors) can be toggled with a single argument. Summary statistics are optionally calculated and presented in a tabular format similar to R2WinBUGS (with the option of excluding certain monitored nodes from calculation to save running time). Functions for generating simple posterior predictive check plots, traceplots, and "whisker plots" of parameter posterior distributions are included as are methods for plotting output using the standard xyplot() and densityplot() functions.
+Description: An alternative interface for running JAGS analyses in R via rjags/libjags. A complete analysis can be run with a single function call using syntax and input formats identical to those used by R2WinBUGS and R2OpenBUGS (as with the similar R2jags package). This allows easy switching between running MCMC in BUGS and JAGS.  Separate adaptive and "burn-in" MCMC phases can be specified and parallel processing of chains (on multi-core processors) can be toggled with a single argument. Summary statistics are optionally calculated and presented in a tabular format similar to R2WinBUGS (with the option of excluding certain monitored nodes from calculation to save running time). Functions for generating simple posterior predictive check plots, traceplots, and "whisker plots" of parameter posterior distributions are included as are methods for plotting output using the xyplot() and densityplot() functions from the lattice package.
 License: GPL-2
 URL: https://github.com/kenkellner/jagsUI
 NeedsCompilation: no
