@@ -1,3 +1,7 @@
+# Changes from Version 1.2 to 1.3 [1-Dec-2014] #
+
+Add warning and fix issue with traceplot when number of saved iterations after thinning was rounded up by JAGS (because it wasn't an integer). Several small fixes to clean up code and get R CMD check to run cleanly.
+
 # Changes from Version 1.1 to 1.2 [19-Nov-2014] #
 
 Add some failsafes/warnings.
